Mon Apr  9 19:02:07 2001  Tim Janik  <timj@gtk.org>

	* configure.in (GTK_MICRO_VERSION): increment version to 1.3.4 (binary
	0, interface 0).

2001-04-04  Denis Oliver Kropp  <dok@convergence.de>

	* gtk/gtkcalendar.c (gtk_calendar_button_press):
        check for action_func != NULL

2001-04-04  Sven Neumann  <sven@gimp.org>

	* tests/testgtk.c (test_init): corrected path to gtk.immodules

Wed Apr  4 09:18:18 2001  Tim Janik  <timj@gtk.org>

	* Released Gtk+-1.3.3.

Wed Apr  4 07:42:23 2001  Tim Janik  <timj@gtk.org>

	* gdk/Makefile.am (EXTRA_DIST): add makeenums.pl to EXTRA_DIST.

Wed Apr  4 04:13:18 2001  Tim Janik  <timj@gtk.org>

	* gtk/stock-icons/Makefile.am: stay in builddir and read/write
	files to/from source dir. (if we don't stay in builddir, we
	can't reach make-inline-pixbuf.

	* gdk/Makefile.am (gdkenumtypes.c): add $(srcdir) to mekeenums.pl
	deps.

	* configure.in (GTK_MICRO_VERSION): up and away (1.3.3 bin/interface
	ages 0).

Tue Apr  3 15:04:45 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodelsort.h:  removed set_sort_column, as it was
	moved to the GtkTreeSortable interface.

	* gtk/gtktreeselection.c (gtk_tree_selection_selected_foreach):
	Make more efficient (fixes #50262).

Tue Apr  3 13:55:37 2001  Owen Taylor  <otaylor@redhat.com>

	* NEWS: Updated.

	* configure.in: Remove support for uninstalled glib.

	* gtk/gtkdnd.c (gtk_drag_highlight_expose): Return FALSE as
	so as not to stop emission.

	* gtk-config-2.0.in: Exit with an error message that gtk-config-2.0
	is no longer supported.

	* Makefile.am gtk/Makefile.am tests/*: Moved all tests
	into tests, change build order to build modules before
	gtk/.

	* modules/input/Makefile.am: Move gtk-query-immodules-2.0 invocation
	to here.

Tue Apr  3 13:52:57 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkitemfactory.[hc]: changed gtk_item_factory_dump_items()
	and gtk_item_factory_dump_rc() GtkPatternSpec argument to
	GPatternSpec. this is actually unlikely to cause breakage in